browser/themes/osx/downloads/downloads.css
#
downloadsPanel
>
.
panel
-
arrowcontainer
>
.
panel
-
arrowcontent
{
padding
:
0
;
}
#
downloadsListBox
{
background
:
transparent
;
padding
:
4px
;
color
:
inherit
;
}
#
downloadsPanel
:
not
(
[
hasdownloads
]
)
>
#
downloadsListBox
{
display
:
none
;
}
#
downloadsFooter
{
border
-
bottom
-
left
-
radius
:
6px
;
border
-
bottom
-
right
-
radius
:
6px
;
}
#
downloadsHistory
{
background
:
transparent
;
color
:
hsl
(
210
100
%
75
%
)
;
cursor
:
pointer
;
}
#
downloadsPanel
:
not
(
[
hasdownloads
]
)
>
#
downloadsFooter
>
#
downloadsHistory
{
border
-
top
-
left
-
radius
:
6px
;
border
-
top
-
right
-
radius
:
6px
;
}
#
downloadsPanel
[
hasdownloads
]
>
#
downloadsFooter
{
background
:
#
e5e5e5
;
border
-
top
:
1px
solid
hsla
(
0
0
%
0
%
.
1
)
;
box
-
shadow
:
0
-
1px
hsla
(
0
0
%
100
%
.
5
)
inset
0
1px
1px
hsla
(
0
0
%
0
%
.
03
)
inset
;
}
#
downloadsHistory
>
.
button
-
box
{
color
:
#
808080
;
margin
:
1em
;
}
#
downloadsPanel
[
keyfocus
]
>
#
downloadsFooter
>
#
downloadsSummary
:
focus
#
downloadsPanel
[
keyfocus
]
>
#
downloadsFooter
>
#
downloadsHistory
:
focus
{
outline
:
2px
-
moz
-
mac
-
focusring
solid
;
outline
-
offset
:
-
2px
;
-
moz
-
outline
-
radius
-
bottomleft
:
5px
;
-
moz
-
outline
-
radius
-
bottomright
:
5px
;
}
#
downloadsPanel
:
not
(
[
hasdownloads
]
)
>
#
downloadsFooter
>
#
downloadsHistory
:
focus
{
-
moz
-
outline
-
radius
-
topleft
:
5px
;
-
moz
-
outline
-
radius
-
topright
:
5px
;
}
#
downloadsPanel
:
not
(
[
hasdownloads
]
)
>
#
downloadsFooter
>
#
downloadsHistory
:
focus
>
.
button
-
box
{
border
-
bottom
-
left
-
radius
:
6px
;
border
-
bottom
-
right
-
radius
:
6px
;
}
#
downloadsSummary
richlistitem
[
type
=
"
download
"
]
{
height
:
7em
;
-
moz
-
padding
-
end
:
0
;
color
:
inherit
;
}
#
downloadsSummary
{
padding
:
8px
38px
8px
12px
;
cursor
:
pointer
;
-
moz
-
user
-
focus
:
normal
;
}
#
downloadsSummary
>
.
downloadTypeIcon
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
downloads
/
download
-
summary
.
png
"
)
;
}
media
(
min
-
resolution
:
2dppx
)
{
#
downloadsSummary
>
.
downloadTypeIcon
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
downloads
/
download
-
summary
2x
.
png
"
)
;
}
}
#
downloadsSummaryDescription
{
color
:
-
moz
-
nativehyperlinktext
;
}
richlistitem
[
type
=
"
download
"
]
{
margin
:
0
;
border
-
top
:
1px
solid
hsla
(
0
0
%
100
%
.
07
)
;
border
-
bottom
:
1px
solid
hsla
(
0
0
%
0
%
.
2
)
;
background
:
transparent
;
padding
:
8px
;
}
richlistitem
[
type
=
"
download
"
]
:
first
-
child
{
border
-
top
:
1px
solid
transparent
;
}
richlistitem
[
type
=
"
download
"
]
:
last
-
child
{
border
-
bottom
:
1px
solid
transparent
;
}
.
downloadTypeIcon
{
-
moz
-
margin
-
end
:
8px
;
height
:
32px
;
width
:
32px
;
}
.
blockedIcon
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
global
/
skin
/
icons
/
Error
.
png
"
)
;
}
#
downloadsSummaryDetails
.
downloadContainer
{
font
-
size
:
95
%
;
}
#
downloadsSummaryDescription
.
downloadTarget
{
margin
-
bottom
:
6px
;
cursor
:
inherit
;
}
.
downloadTarget
{
font
-
size
:
calc
(
100
%
/
0
.
95
)
;
}
#
downloadsSummaryDetails
.
downloadDetails
{
opacity
:
0
.
7
;
cursor
:
inherit
;
}
.
downloadButton
{
-
moz
-
appearance
:
none
;
min
-
width
:
0
;
min
-
height
:
0
;
margin
:
3px
;
border
:
none
;
background
:
transparent
;
padding
:
5px
;
list
-
style
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
downloads
/
buttons
.
png
"
)
;
}
.
downloadButton
:
focus
>
.
button
-
box
{
outline
:
2px
-
moz
-
mac
-
focusring
solid
;
outline
-
offset
:
-
2px
;
}
.
downloadButton
>
.
button
-
box
{
padding
:
0
;
}
#
downloadsPanel
[
keyfocus
]
>
#
downloadsListBox
:
focus
>
richlistitem
[
type
=
"
download
"
]
[
selected
]
#
downloadsPanel
:
not
(
[
keyfocus
]
)
>
#
downloadsListBox
>
richlistitem
[
type
=
"
download
"
]
[
state
=
"
1
"
]
[
exists
]
:
hover
{
border
-
radius
:
3px
;
border
-
top
:
1px
solid
hsla
(
0
0
%
100
%
.
2
)
;
border
-
bottom
:
1px
solid
hsla
(
0
0
%
0
%
.
4
)
;
background
-
color
:
Highlight
;
color
:
HighlightText
;
}
#
downloadsPanel
:
not
(
[
keyfocus
]
)
>
#
downloadsListBox
>
richlistitem
[
type
=
"
download
"
]
[
state
=
"
1
"
]
[
exists
]
:
hover
{
cursor
:
pointer
;
}
.
downloadButton
.
downloadCancel
{
-
moz
-
image
-
region
:
rect
(
0px
16px
16px
0px
)
;
}
richlistitem
[
type
=
"
download
"
]
:
hover
>
stack
>
.
downloadButton
.
downloadCancel
{
-
moz
-
image
-
region
:
rect
(
0px
32px
16px
16px
)
;
}
richlistitem
[
type
=
"
download
"
]
:
hover
>
stack
>
.
downloadButton
.
downloadCancel
:
hover
{
-
moz
-
image
-
region
:
rect
(
0px
48px
16px
32px
)
;
}
richlistitem
[
type
=
"
download
"
]
:
hover
>
stack
>
.
downloadButton
.
downloadCancel
:
active
{
-
moz
-
image
-
region
:
rect
(
0px
64px
16px
48px
)
;
}
#
downloadsPanel
[
keyfocus
]
>
#
downloadsListBox
:
focus
>
richlistitem
[
type
=
"
download
"
]
[
selected
]
>
stack
>
.
downloadButton
.
downloadCancel
{
-
moz
-
image
-
region
:
rect
(
0px
80px
16px
64px
)
;
}
#
downloadsPanel
[
keyfocus
]
>
#
downloadsListBox
:
focus
>
richlistitem
[
type
=
"
download
"
]
:
hover
[
selected
]
>
stack
>
.
downloadButton
.
downloadCancel
{
-
moz
-
image
-
region
:
rect
(
0px
96px
16px
80px
)
;
}
#
downloadsPanel
[
keyfocus
]
>
#
downloadsListBox
:
focus
>
richlistitem
[
type
=
"
download
"
]
:
hover
[
selected
]
>
stack
>
.
downloadButton
.
downloadCancel
:
hover
{
-
moz
-
image
-
region
:
rect
(
0px
112px
16px
96px
)
;
}
#
downloadsPanel
[
keyfocus
]
>
#
downloadsListBox
:
focus
>
richlistitem
[
type
=
"
download
"
]
:
hover
[
selected
]
>
stack
>
.
downloadButton
.
downloadCancel
:
active
{
-
moz
-
image
-
region
:
rect
(
0px
128px
16px
112px
)
;
}
.
downloadButton
.
downloadShow
{
-
moz
-
image
-
region
:
rect
(
16px
16px
32px
0px
)
;
}
#
downloadsPanel
[
keyfocus
]
>
#
downloadsListBox
>
richlistitem
[
type
=
"
download
"
]
[
state
=
"
1
"
]
:
hover
:
not
[
selected
]
>
stack
>
.
downloadButton
.
downloadShow
{
-
moz
-
image
-
region
:
rect
(
16px
32px
32px
16px
)
;
}
/* ... */

