[Australis] Bug 968595 - Adjust Download panel alignment and panel styling. r=mikedeboer
UltraBlame original commit: fa8c62aeff33c561877a6762cc6de997c28b314d

--- a/browser/themes/osx/downloads/downloads.css
+++ b/browser/themes/osx/downloads/downloads.css
@@ -1,5 +1,16 @@
 #
 downloadsPanel
+{
+margin
+-
+top
+:
+-
+1px
+;
+}
+#
+downloadsPanel
 >
 .
 panel
@@ -61,7 +72,7 @@ left
 -
 radius
 :
-6px
+4px
 ;
 border
 -
@@ -71,7 +82,7 @@ right
 -
 radius
 :
-6px
+4px
 ;
 }
 #
@@ -95,43 +106,6 @@ hsl
 cursor
 :
 pointer
-;
-}
-#
-downloadsPanel
-:
-not
-(
-[
-hasdownloads
-]
-)
->
-#
-downloadsFooter
->
-#
-downloadsHistory
-{
-border
--
-top
--
-left
--
-radius
-:
-6px
-;
-border
--
-top
--
-right
--
-radius
-:
-6px
 ;
 }
 #
@@ -271,7 +245,7 @@ radius
 -
 bottomleft
 :
-5px
+4px
 ;
 -
 moz
@@ -282,7 +256,7 @@ radius
 -
 bottomright
 :
-5px
+4px
 ;
 }
 #
@@ -312,7 +286,7 @@ radius
 -
 topleft
 :
-5px
+4px
 ;
 -
 moz
@@ -323,51 +297,7 @@ radius
 -
 topright
 :
-5px
-;
-}
-#
-downloadsPanel
-:
-not
-(
-[
-hasdownloads
-]
-)
->
-#
-downloadsFooter
->
-#
-downloadsHistory
-:
-focus
->
-.
-button
--
-box
-{
-border
--
-bottom
--
-left
--
-radius
-:
-6px
-;
-border
--
-bottom
--
-right
--
-radius
-:
-6px
+4px
 ;
 }
 #
